modified to first version

--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -65,7 +65,7 @@
 }
 .social:hover { color: #fff; background: #888; }
 
-.social-facebook { background: #6686b7; }
 .social-twitter { background: #54c0dd; }
-.social-pinterest { background: #ff5e63; }
+.social-github { background: #9cdaf0; }
+.social-googleplus { background: #dd4b38; }
 
