--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,11 +35,11 @@ img { max-width: 100%; }
 .top-content {
     margin: 0 auto;
     text-align: left;
-    color: #fff;
+    color: #000;
 }
 
 .inner-bg {
-    padding: 80px 0;
+    padding: 20px 0;
 }
 
 .top-content .phone {
@@ -57,7 +57,7 @@ img { max-width: 100%; }
 }
 
 .top-content .top-button {
-	margin-top: 40px;
+	margin-top: 100px;
 }
 
 
@@ -66,7 +66,7 @@ img { max-width: 100%; }
 .features-container {
     margin: 0 auto;
     padding-bottom: 60px;
-    color: #888;
+    color: #333;
     text-align: center;
 }
 
@@ -113,6 +113,7 @@ img { max-width: 100%; }
 
 .single-feature-container {
     margin: 0 auto;
+	padding-top: 100px;
     text-align: center;
 }
 
@@ -144,7 +145,7 @@ img { max-width: 100%; }
 }
 
 .single-feature-bg {
-	color: #fff;
+	color: #000;
 }
 
 .single-feature-no-bg {
