--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -14,6 +14,7 @@
     
     .single-feature-no-bg { padding-bottom: 40px; }
     .single-feature-no-bg .single-feature-img-description { margin-top: 50px; text-align: center; }
+	.single-feature-img-description p { text-align: left; }
     .single-feature-no-bg .single-feature-img { margin-top: 30px; }
 
 }
@@ -34,6 +35,7 @@
     
     .single-feature-no-bg { padding-bottom: 40px; }
     .single-feature-no-bg .single-feature-img-description { margin-top: 50px; text-align: center; }
+	.single-feature-img-description p { text-align: left; }
     .single-feature-no-bg .single-feature-img { margin-top: 30px; }
     
     .footer-copyright, .footer-social { text-align: center; }
