--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
 body {
     background: #fff;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
 }
 
 strong { font-weight: 700; }
@@ -17,17 +16,31 @@ a, a:hover, a:focus {
     transition: all .3s;
 }
 
-h1, h2 {
+h1 {
 	margin-top: 10px;
 	font-size: 42px;
     font-weight: 700;
     line-height: 54px;
+    font-family: 'Lora';
 }
+
+h2 {
+	margin-top: 10px;
+	font-size: 36px;
+    font-weight: 700;
+    line-height: 48px;
+    font-family: 'Lora';
+}
+
+h3 {
+    font-weight: 700;
+}
+
 
 img { max-width: 100%; }
 
-::-moz-selection { background: #b44e4a; color: #fff; text-shadow: none; }
-::selection { background: #b44e4a; color: #fff; text-shadow: none; }
+::-moz-selection { background: #e65100; color: #fff; text-shadow: none; }
+::selection { background: #e65100; color: #fff; text-shadow: none; }
 
 
 /***** Top content *****/
@@ -68,6 +81,7 @@ img { max-width: 100%; }
     padding-bottom: 60px;
     color: #333;
     text-align: center;
+	background: #ffd54f none repeat scroll 0 0;
 }
 
 .features {
@@ -113,7 +127,8 @@ img { max-width: 100%; }
 
 .single-feature-container {
     margin: 0 auto;
-	padding-top: 100px;
+	padding-top: 50px;
+	padding-bottom: 50px;
     text-align: center;
 }
 
@@ -134,10 +149,10 @@ img { max-width: 100%; }
 }
 
 .single-feature-img-description {
-	margin-top: 70px;
+	margin-top: 40px;
 	font-size: 18px;
     line-height: 32px;
-	text-align: right;
+	text-align: left;
 }
 
 .single-feature-img-description p {
@@ -146,10 +161,12 @@ img { max-width: 100%; }
 
 .single-feature-bg {
 	color: #000;
+	background: #e3f2fd none repeat scroll 0 0;
 }
 
 .single-feature-no-bg {
-	color: #888;
+	color: #000;
+	background: #f0f4c3 none repeat scroll 0 0;
 }
 
 .single-feature-no-bg h2 {
@@ -164,6 +181,9 @@ img { max-width: 100%; }
 
 
 /***** Call to action *****/
+
+.call-to-action-in-page {
+}
 
 .call-to-action-container {
     margin: 0 auto;
