--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body {
 strong { font-weight: 700; }
 
 a, a:hover, a:focus {
-	color: #888;
-	text-decoration: none;
+	color: #000;
+	text-decoration: underline;
     -o-transition: all .3s;
     -moz-transition: all .3s;
     -webkit-transition: all .3s;
@@ -20,7 +20,7 @@ h1 {
 	margin-top: 10px;
 	font-size: 42px;
     font-weight: 700;
-    line-height: 54px;
+    line-height: 60px;
     font-family: 'Lora';
 }
 
@@ -60,19 +60,14 @@ img { max-width: 100%; }
 }
 
 .top-content .text {
-	padding-top: 100px;
+	padding-top: 80px;
 }
 
-.top-content .description {
+.top-content {
 	margin: 40px 0 10px 0;
-    font-size: 22px;
+    font-size: 28px;
     line-height: 36px;
 }
-
-.top-content .top-button {
-	margin-top: 100px;
-}
-
 
 /***** Features *****/
 
